# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-03-25 10:41:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-34

    Summary:
      added warning comment for Windows ('get_abspath')
    Revision:
      itools--main--0.8--patch-34

    Suggested by Oliver Marx.

    modified files:
     Changelog __init__.py


2005-03-24 20:15:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-33

    Summary:
      documentation, update XML element's API
    Revision:
      itools--main--0.8--patch-33


    modified files:
     Changelog doc/xml.tex


2005-03-24 19:56:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-32

    Summary:
      xml, fix copy
    Revision:
      itools--main--0.8--patch-32


    modified files:
     Changelog xml/XML.py


2005-03-24 19:39:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-31

    Summary:
      xml, remove the parent reference, it was not used anywhere
    Revision:
      itools--main--0.8--patch-31


    modified files:
     Changelog xml/XML.py


2005-03-24 19:33:38 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-30

    Summary:
      xml, improve attributes API and implementation
    Revision:
      itools--main--0.8--patch-30

    The data structure 'attributes_by_qname' has been replaced by the more
    compact and less redundant 'prefixes'.
    
    A new method has been added, 'get_attribute_qname', and the prototype of
    'set_attribute' has changed so it now requires the namespace uri to be
    passed first.

    modified files:
     Changelog xml/STL.py xml/XHTML.py xml/XML.py


2005-03-24 18:08:12 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-29

    Summary:
      xml, improving API and documentation
    Revision:
      itools--main--0.8--patch-29

    Specifically the document's ('xml_version', 'standalone', etc.) and
    attributes ('get_attribute', etc.) APIs.

    modified files: