@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
 #
 
+2005-03-25 19:19:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-35
+
+    Summary:
+      xml, separate serialization and de-serialization from logic
+    Revision:
+      itools--main--0.8--patch-35
+
+
+    modified files:
+     Changelog handlers/IO.py xml/STL.py xml/XHTML.py xml/XML.py
+
+
 2005-03-25 10:41:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-34
 
     Summary:
